--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meet - Group Chat for Everyone</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
         <div class='meet-logo'>
@@ -16,7 +21,7 @@
             <div class="first-text">
                 <h1 id="heading-one">Group Chat <br> for Everyone</h1>
                 <p id="first-paragraph">Meet makes it easy to connect with others face-to-face virtually <br>
-                and collaborate across any device.</p>
+                    and collaborate across any device.</p>
                 <button id='button-one'><strong><span>Download</span> <span id="version1">v1.3</span></strong></button>
                 <button id='button-two'><strong>What is it?</strong></button>
             </div>
@@ -30,13 +35,8 @@
                 <div><img src="image-man-texting.jpg" alt="" class="img last"></div>
             </div>
             <div class="second-text">
-                <h5>
-                    <span>B</span> <span>U</span> <span>I</span> <span>L</span> <span>T</span>
-                    <span>F</span> <span>O</span> <span>R</span>
-                    <span>M</span> <span>O</span> <span>D</span> <span>E</span> <span>R</span> <span>N</span>
-                    <span>U</span> <span>S</span> <span>E</span>
-                </h5>
-                <h1 id="heading1">Smarter meetings, all <br> in one place</h1>
+                <h5>BUILT FOR MODERN USE</h5>
+                <h2 id="heading1">Smarter meetings, all <br> in one place</h2>
                 <p id="describe">Send messages, share files, show your screen, and record your <br>
                 meetings - all in one workspace. Control who can join with <br>
                 invite-only team access, data encryption, and data export.</p>
