--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 <p class="last-text">Stay connected with reliable HD meetings <br>
                 and unlimited one-on-one and group <br>
                 video sessions.</p>
-                <button id="button-three"><strong><span>Download</span> <span id="version2">v1.3</span></strong></button>
+                <div class="buttonv">
+                    <button id="button-three"><strong><span>Download</span> <span id="version2">v1.3</span></strong></button>
+                </div>
+                
             </div>
         </div>
 </body>
